# hermes-station

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DEBT.md  LICENSE  PROJECT_CONSTITUTION.md  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  plugin.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CAPABILITY_COVERAGE.md  DEVELOPMENT.md  PLUGIN_INSTALL.md  REST_API.md  UI_CONVENTIONS.md  WS_PROTOCOL.md
public/: manifest.webmanifest
scripts/: codemod_tokens.mjs  dev.sh  install.sh  install_plugin.sh  lint_no_hardcoding.sh  lint_no_inline_style.allowlist  lint_no_inline_style.sh  smoke_api_routes.py  smoke_approval_bridge.py  smoke_run_ws.py  test.sh  uninstall_plugin.sh
server/: __init__.py  __main__.py  adapter.py  app.py  app_keys.py  approvals.py  auth.py  capabilities.py  cli.py  csrf.py  lifecycle.py  runs.py  settings.py  ws.py  ws_dispatch.py
server/lib/: argon2_hash.py  config_reader.py  dashboard_supervisor.py  plugin_install.py  profile_run.py  route_helpers.py  run_snapshot.py  session_store.py  state_db.py  station_prefs.py  upstream_paths.py  upstream_shim.py  workspace_cwd.py  yaml_edit.py
server/middleware/: __init__.py  cors.py  host_guard.py  rate_limit.py  security_headers.py
server/routes/: allowlist.py  analytics.py  approvals.py  chat.py  config.py  dashboard_proxy.py  files.py  kanban.py  lifecycle.py  login.py  logs.py  mcp.py  memory.py  models.py  onboarding.py  password.py  plugins.py  preferences.py  profiles.py  projects.py  runs.py  settings.py  skills_content.py  upload.py  ws.py
src/: App.tsx  main.tsx
src/hooks/: useActiveSessionProfile.ts  useActiveSessionTitle.ts  useAgentRoomStream.ts  useAnalytics.ts  useApprovalBridge.ts  useBreakpoint.ts  useCapabilities.ts  useCron.ts  useDangerousCommandApproval.ts  useDebouncedValue.ts  useEdgeSwipe.ts  useElapsedSeconds.ts  useEnterAnimation.ts  useFiles.ts  useKanban.ts  useLivePreview.ts  useMcp.ts  useMemory.ts  usePinnedSessions.ts  usePlugins.ts  useProfiles.ts  useProviders.ts  useRunsStream.ts  useSessionArtifacts.ts  useSkills.ts  useTextToSpeech.ts  useVisualViewport.ts  useWorkspaces.ts
src/i18n/: context.tsx  en.ts  index.ts  types.ts  zh.ts
src/lib/: api.ts  artifacts.ts  branch.ts  chat-runtime.ts  commands.ts  composer-tokens.tsx  epub-zip.ts  errors.ts  escape.ts  export-pdf.ts  export-pdf.tsx  file-target.ts  hermes-types.ts  live-preview.ts  load-session.ts  mermaid-util.ts  monaco-setup.ts  run-events.ts  run-profile.ts  session-actions.tsx  session-messages.ts  session-mutations.ts  session-title.ts  slash-commands.ts  tool-meta.ts  ws-types.ts
src/panels/: AgentsPanel.tsx  AnalyticsPanel.tsx  ArtifactsPanel.tsx  ChannelsPanel.tsx  ChatPanel.tsx  CronPanel.tsx  FilesPanel.tsx  GroupPanel.tsx  KanbanPanel.tsx  LogsPanel.tsx  MemoryPanel.tsx  ModelsPanel.tsx  PluginsPanel.tsx  ProfilePanel.tsx  SessionsPanel.tsx  SettingsPanel.tsx  SkillsPanel.tsx
src/routes/: registry.tsx
src/store/: agentRoom.ts  app.ts  capabilities.ts  chat.ts  composer-queue.ts  discovery.ts  filters.ts  overlays.ts  panel-selection.ts  profile-colors.ts  profile-scope.ts  sidebar-nav.ts  sidebar-search.ts  subagents.ts  ws.ts
src/styles/: chat.css  components.css  files.css  layout.css  mobile.css  skin-bridge.css  skins.ts  theme.css  tokens.css
tests/: README.md  conftest.py  setup.ts
tests/e2e/: README.md  mocks.ts  smoke.spec.ts
tests/unit/: test_adapter_send.py  test_allowlist.py  test_analytics.py  test_api_routes.py  test_approvals.py  (+41 more)
(+158 files in other folders)
